@@ -1,19 +1,20 @@
 package oracle.sysman.emaas.platform.dashboards.entity;
 
-import org.testng.annotations.Test;
-
+import java.math.BigInteger;
 import java.util.ArrayList;
 import java.util.Date;
 import java.util.List;
 
-import static org.testng.Assert.assertEquals;
+import org.testng.Assert;
+import org.testng.annotations.Test;
+
 
 
 @Test(groups={"s1"})
 public class EmsDashboardTileTest { 
     Date now = new Date();
-    private EmsDashboard emsDashboard = new EmsDashboard(now,10L,10L,"elephant",10,10,10,10,10,10, now,
-            "elephant","elephant","elephant","elephant",10,10,1, "{}");
+    private EmsDashboard emsDashboard = new EmsDashboard(now,BigInteger.valueOf(10L),BigInteger.valueOf(10L),"elephant",10,10,10,10,10,10, now,
+            "elephant","elephant","elephant","elephant",10,10,1,"{}");
 
     private EmsDashboardTile emsDashboardTile = new EmsDashboardTile(
             now,
@@ -29,7 +30,7 @@ public class EmsDashboardTileTest {
             "elephant",
             "elephant",
             "dolphine",
-            10L,
+            "10",
             "dolphine",
             "dolphine",
             "dolphine",
@@ -45,7 +46,7 @@ public class EmsDashboardTileTest {
             "lion",
             10,
             10,
-            10L,
+            BigInteger.valueOf(10L),
             1,
             new Date());
 
@@ -60,27 +61,27 @@ public class EmsDashboardTileTest {
             emsDashboardTile);
     @Test
     public void testAddEmsDashboardTileParams() {
-        assertEquals(emsDashboardTile.addEmsDashboardTileParams(emsDashboardTileParams),emsDashboardTileParams);
+    	Assert.assertEquals(emsDashboardTile.addEmsDashboardTileParams(emsDashboardTileParams),emsDashboardTileParams);
     }
 
     @Test
     public void testGetColumn() {
         EmsDashboardTile emsDashboardTile1 = new EmsDashboardTile();
         emsDashboardTile1.setColumn(10);
-        assertEquals(emsDashboardTile1.getColumn(),new Integer(10));
+        Assert.assertEquals(emsDashboardTile1.getColumn(),new Integer(10));
 
     }
 
     @Test
     public void testGetCreationDate() { 
         emsDashboardTile.setCreationDate(now);
-        assertEquals(emsDashboardTile.getCreationDate(), now); 
+        Assert.assertEquals(emsDashboardTile.getCreationDate(), now); 
     }
 
     @Test
     public void testGetDashboard() {
         emsDashboardTile.setDashboard(emsDashboard);
-        assertEquals(emsDashboardTile.getDashboard(),emsDashboard);
+        Assert.assertEquals(emsDashboardTile.getDashboard(),emsDashboard);
     }
 
     @Test
@@ -88,187 +89,187 @@ public class EmsDashboardTileTest {
 
         List<EmsDashboardTileParams> list = new ArrayList<EmsDashboardTileParams>();
         emsDashboardTile.setDashboardTileParamsList(list);
-        assertEquals(emsDashboardTile.getDashboardTileParamsList(),list);
+        Assert.assertEquals(emsDashboardTile.getDashboardTileParamsList(),list);
 
     }
 
     @Test
     public void testGetHeight() {
         emsDashboardTile.setHeight(10);
-        assertEquals(emsDashboardTile.getHeight(),new Integer(10));
+        Assert.assertEquals(emsDashboardTile.getHeight(),new Integer(10));
     }
 
     @Test
     public void testGetIsMaximized() {
         emsDashboardTile.setIsMaximized(10);
-        assertEquals(emsDashboardTile.getIsMaximized(),new Integer(10));
+        Assert.assertEquals(emsDashboardTile.getIsMaximized(),new Integer(10));
     }
 
     @Test
     public void testGetLastModificationDate() {
         emsDashboardTile.setLastModificationDate(now);
-        assertEquals(emsDashboardTile.getLastModificationDate(), now);
+        Assert.assertEquals(emsDashboardTile.getLastModificationDate(), now);
     }
 
     @Test
     public void testGetLastModifiedBy() {
         emsDashboardTile.setLastModifiedBy("elephant");
-        assertEquals(emsDashboardTile.getLastModifiedBy(),"elephant");
+        Assert.assertEquals(emsDashboardTile.getLastModifiedBy(),"elephant");
     }
 
     @Test
     public void testGetOwner() {
         emsDashboardTile.setOwner("elephant");
-        assertEquals(emsDashboardTile.getOwner(),"elephant");
+        Assert.assertEquals(emsDashboardTile.getOwner(),"elephant");
     }
 
     @Test
     public void testGetPosition() {
         emsDashboardTile.setPosition(10);
-        assertEquals(emsDashboardTile.getPosition(),new Integer(0));
+        Assert.assertEquals(emsDashboardTile.getPosition(),new Integer(0));
 
     }
 
     @Test
     public void testGetProviderAssetRoot() {
         emsDashboardTile.setProviderAssetRoot("elephant");
-        assertEquals(emsDashboardTile.getProviderAssetRoot(),"elephant");
+        Assert.assertEquals(emsDashboardTile.getProviderAssetRoot(),"elephant");
     }
 
     @Test
     public void testGetProviderName() {
         emsDashboardTile.setProviderName("elephant");
-        assertEquals(emsDashboardTile.getProviderName(),"elephant");
+        Assert.assertEquals(emsDashboardTile.getProviderName(),"elephant");
     }
 
     @Test
     public void testGetProviderVersion() {
         emsDashboardTile.setProviderVersion("elephant");
-        assertEquals(emsDashboardTile.getProviderVersion(),"elephant");
+        Assert.assertEquals(emsDashboardTile.getProviderVersion(),"elephant");
 
     }
 
     @Test
     public void testGetRow() {
         emsDashboardTile.setRow(10);
-        assertEquals(emsDashboardTile.getRow(),new Integer(10));
+        Assert.assertEquals(emsDashboardTile.getRow(),new Integer(10));
     }
 
     @Test
     public void testGetTileId() {
-        assertEquals(emsDashboardTile.getTileId(),new Long(10));
+    	Assert.assertEquals(emsDashboardTile.getTileId(), "10");
 
     }
 
     @Test
     public void testGetTitle() {
         emsDashboardTile.setTitle("elephant");
-        assertEquals(emsDashboardTile.getTitle(),"elephant");
+        Assert.assertEquals(emsDashboardTile.getTitle(),"elephant");
 
     }
 
     @Test
     public void testGetType() {
         emsDashboardTile.setType(10);
-        assertEquals(emsDashboardTile.getType(),new Integer(10));
+        Assert.assertEquals(emsDashboardTile.getType(),new Integer(10));
 
     }
 
     @Test
     public void testGetWidgetCreationTime() {
         emsDashboardTile.setWidgetCreationTime("elephant");
-        assertEquals(emsDashboardTile.getWidgetCreationTime(),"elephant");
+        Assert.assertEquals(emsDashboardTile.getWidgetCreationTime(),"elephant");
     }
 
     @Test
     public void testGetWidgetDescription() {
         emsDashboardTile.setWidgetDescription("elephant");
-        assertEquals(emsDashboardTile.getWidgetDescription(),"elephant");
+        Assert.assertEquals(emsDashboardTile.getWidgetDescription(),"elephant");
 
     }
 
     @Test
     public void testGetWidgetGroupName() {
         emsDashboardTile.setWidgetGroupName("elephant");
-        assertEquals(emsDashboardTile.getWidgetGroupName(),"elephant");
+        Assert.assertEquals(emsDashboardTile.getWidgetGroupName(),"elephant");
 
     }
 
     @Test
     public void testGetWidgetHistogram() {
         emsDashboardTile.setWidgetHistogram("elephant");
-        assertEquals(emsDashboardTile.getWidgetHistogram(),"elephant");
+        Assert.assertEquals(emsDashboardTile.getWidgetHistogram(),"elephant");
     }
 
     @Test
     public void testGetWidgetIcon() {
         emsDashboardTile.setWidgetIcon("elephant");
-        assertEquals(emsDashboardTile.getWidgetIcon(),"elephant");
+        Assert.assertEquals(emsDashboardTile.getWidgetIcon(),"elephant");
     }
 
     @Test
     public void testGetWidgetKocName() {
         emsDashboardTile.setWidgetKocName("elephant");
-        assertEquals(emsDashboardTile.getWidgetKocName(),"elephant");
+        Assert.assertEquals(emsDashboardTile.getWidgetKocName(),"elephant");
     }
 
     @Test
     public void testGetWidgetLinkedDashboard() {
-        emsDashboardTile.setWidgetLinkedDashboard(10L);
-        assertEquals(emsDashboardTile.getWidgetLinkedDashboard(),new Long(10));
+        emsDashboardTile.setWidgetLinkedDashboard(BigInteger.valueOf(10L));
+        Assert.assertEquals(emsDashboardTile.getWidgetLinkedDashboard(),BigInteger.valueOf(10L));
 
     }
 
     @Test
     public void testGetWidgetName() {
         emsDashboardTile.setWidgetName("elephant");
-        assertEquals(emsDashboardTile.getWidgetName(),"elephant");
+        Assert.assertEquals(emsDashboardTile.getWidgetName(),"elephant");
 
     }
 
     @Test
     public void testGetWidgetOwner() {
         emsDashboardTile.setWidgetOwner("elephant");
-        assertEquals(emsDashboardTile.getWidgetOwner(),"elephant");
+        Assert.assertEquals(emsDashboardTile.getWidgetOwner(),"elephant");
     }
 
     @Test
     public void testGetWidgetSource() {
         emsDashboardTile.setWidgetSource(10);
-        assertEquals(emsDashboardTile.getWidgetSource(),new Integer(10));
+        Assert.assertEquals(emsDashboardTile.getWidgetSource(),new Integer(10));
 
     }
 
     @Test
     public void testGetWidgetSupportTimeControl() {
         emsDashboardTile.setWidgetSupportTimeControl(10);
-        assertEquals(emsDashboardTile.getWidgetSupportTimeControl(),new Integer(10));
+        Assert.assertEquals(emsDashboardTile.getWidgetSupportTimeControl(),new Integer(10));
 
     }
 
     @Test
     public void testGetWidgetTemplate() {
         emsDashboardTile.setWidgetTemplate("elephant");
-        assertEquals(emsDashboardTile.getWidgetTemplate(),"elephant");
+        Assert.assertEquals(emsDashboardTile.getWidgetTemplate(),"elephant");
     }
 
     @Test
     public void testGetWidgetUniqueId() {
         emsDashboardTile.setWidgetUniqueId("123456");
-        assertEquals(emsDashboardTile.getWidgetUniqueId(),"123456");
+        Assert.assertEquals(emsDashboardTile.getWidgetUniqueId(),"123456");
 
     }
 
     @Test
     public void testGetWidgetViewmode() {
         emsDashboardTile.setWidgetViewmode("elephant");
-        assertEquals(emsDashboardTile.getWidgetViewmode(),"elephant");
+        Assert.assertEquals(emsDashboardTile.getWidgetViewmode(),"elephant");
     }
 
     @Test
     public void testGetWidth() {
         emsDashboardTile.setWidth(10);
-        assertEquals(emsDashboardTile.getWidth(),new Integer(10));
+        Assert.assertEquals(emsDashboardTile.getWidth(),new Integer(10));
     }
 
     @Test
@@ -278,5 +279,4 @@ public class EmsDashboardTileTest {
         emsDashboardTile.setDashboardTileParamsList(list);
         emsDashboardTile.removeEmsDashboardTileParams(emsDashboardTileParams);
     }
-
 }
